--- a/tests/build.gradle
+++ b/tests/build.gradle
@@ -21,8 +21,8 @@ repositories {
 
 dependencies {
     testImplementation group: 'junit', name: 'junit', version: '4.13'
-    testImplementation 'org.testcontainers:testcontainers:1.16.3'
-    testImplementation 'io.homecentr:testcontainers-extensions:1.7.0'
+    testImplementation group: 'org.testcontainers', name: 'testcontainers', version: '1.16.3'
+    testImplementation group: 'io.homecentr', name: 'testcontainers-extensions', version: '1.7.0'
     testImplementation group: 'commons-net', name: 'commons-net', version: '3.6'
     testImplementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.30'
     testImplementation group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.30'
