--- a/package.json
+++ b/package.json
@@ -1,15 +1,31 @@
-{ 
-  "name": "homecentr-dhcp",
+{
+  "name": "@homecentr/dhcp",
   "version": "1.0.0",
   "description": "",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/homecentr/docker-dhcp.git"
-  },
-  "author": "",
+  "author": "Lukas Holota",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/homecentr/docker-dhcp/issues"
+  "scripts": {
+    "build": "docker-compose build",
+    "start": "docker-compose up",
+    "start:shell": "docker-compose run --user=0:0 --entrypoint bash image",
+    "test": "jest --testTimeout=60000",
+    "push:preview": "docker-compose push image"
   },
-  "homepage": "https://github.com/homecentr/docker-dhcp#readme"
+  "release": {
+    "branches": [
+      "master"
+    ],
+    "plugins": [
+      "@semantic-release/commit-analyzer",
+      "@semantic-release/release-notes-generator",
+      "@semantic-release/github"
+    ]
+  },
+  "devDependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.18.6",
+    "axios": "^0.27.2",
+    "cross-env": "^7.0.3",
+    "jest": "^28.1.3",
+    "testcontainers": "^8.12.0"
+  }
 }
