--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,1 @@
-*.class
-*.jar
-*.war
-*.ear
-.gradle
-build
-.gradletasknamecache
-
-**/.idea/workspace.xml
-**/.idea/tasks.xml
-
-# Ignore Gradle GUI config
-gradle-app.setting
-
-# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
-!gradle-wrapper.jar
-
-# Cache of project
-.gradletasknamecache
+node_modules
